# pve-yew-mobile-gui

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  Trunk.toml  index.html  index.html.tpl  index.html.tpl.in  manifest.json  pve.css
debian/: changelog  control  copyright  rules
src/: api_types.rs  list_tile.rs  main.rs  page_configuartion.rs  page_container_status.rs  page_dashboard.rs  page_login.rs  page_logs.rs  page_node_status.rs  page_not_found.rs  page_resources.rs  page_storage_status.rs  page_tasks.rs  page_vm_status.rs  top_nav_bar.rs  vm_config_panel.rs  vm_status.rs
src/form/: boot_device_list.rs  hotplug_feature_selector.rs  mod.rs  pve_guest_selector.rs  pve_network_selector.rs  pve_storage_content_selector.rs  pve_storage_selector.rs  pve_vlan_field.rs  qemu_agent_editor.rs  qemu_amd_sev_edit.rs  qemu_bios_property.rs  qemu_cache_type_selector.rs  qemu_config_ostype_selector.rs  qemu_controller_selector.rs  qemu_cpu_flags_list.rs  qemu_cpu_model_selector.rs  qemu_disk_size_format_selector.rs  qemu_display_type_selector.rs  qemu_machine_version_selector.rs  qemu_memory_edit.rs  qemu_memory_property.rs  qemu_ostype_selector.rs  qemu_smbios1_edit.rs  qemu_spice_enhancement_edit.rs
src/form/qemu_property/: mod.rs  qemu_agent_property.rs  qemu_amd_sev_property.rs  qemu_bios_property.rs  qemu_disk_property.rs  qemu_display_property.rs  qemu_efidisk_property.rs  qemu_machine_property.rs  qemu_memory_property.rs  qemu_network_property.rs  qemu_processor_property.rs  qemu_scsihw_property.rs  qemu_smbios1_property.rs  qemu_spice_enhancement_property.rs  qemu_tpmstate_property.rs
src/pages/: mod.rs  page_configuartion.rs  page_container_status.rs  page_container_tasks.rs  page_dashboard.rs  page_login.rs  page_lxc_tasks.rs  page_node_status.rs  page_node_tasks.rs  page_not_found.rs  page_qemu_tasks.rs  page_resources.rs  page_settings.rs  page_storage_status.rs  page_task_status.rs  page_tasks.rs  page_vm_status.rs
src/pages/page_container_status/: dashboard_panel.rs  mod.rs  resources_panel.rs
src/pages/page_lxc_status/: config_panel.rs  dashboard_panel.rs  mod.rs  resources_panel.rs
src/pages/page_node_status/: dashboard_panel.rs  mod.rs  services_panel.rs  updates_panel.rs
src/pages/page_qemu_status/: config_panel.rs  dashboard_panel.rs  hardware_panel.rs  mod.rs  move_disk_dialog.rs  reassign_disk_dialog.rs  resize_disk_dialog.rs
src/pages/page_vm_status/: dashboard_panel.rs  mod.rs  vm_backup_panel.rs  vm_config_panel.rs  vm_hardware_panel.rs
src/widgets/: config_list.rs  edit_dialog.rs  editable_property.rs  guest_backup_panel.rs  list_tile.rs  main_navigation.rs  mod.rs  pending_property_list.rs  property_list.rs  storage_content_panel.rs  task_list_button.rs  tasks_panel.rs  top_nav_bar.rs  vm_config_panel.rs  vm_hardware_panel.rs  volume_action_dialog.rs
