[package]
name = "pve-yew-mobile-gui"
version = "0.5.1"
edition = "2021"

[dependencies]
anyhow = "1.0"
lazy_static = "1.4"
yew = { version = "0.21",  features = ["csr"] }
yew-router = { version = "0.18" }
web-sys = { version = "0.3", features = [ "DomRect", "Element", "UrlSearchParams"] }
wasm-bindgen = { version = "0.2" }
js-sys = "0.3"
log = "0.4.6"
wasm-logger = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4"
url = "2.1"
percent-encoding = "2.1"
gloo-timers = "0.3"
gloo-utils = "0.2"

proxmox-schema = "4"
proxmox-time = "2"
proxmox-uuid = "1"
proxmox-human-byte = "1.0"

pwt = "0.6"
pwt-macros = "0.4"

proxmox-yew-comp = "0.5"

proxmox-login = "1.0"
proxmox-client = "1.0"

pve-api-types = { path = "proxmox-api-types/pve-api-types"  }

[patch.crates-io]
#proxmox-client = { path = "../proxmox/proxmox-client" }
#proxmox-yew-comp = { path = "../proxmox-yew-comp" }
#pwt = { path = "../proxmox-yew-widget-toolkit" }
#pwt-macros = { path = "../proxmox-yew-widget-toolkit/pwt-macros" }
