[package]
name = "pve-yew-mobile-gui"
version = "0.6.2"
edition = "2021"

[dependencies]
anyhow = "1.0"
derivative = "2.2.0"
lazy_static = "1.4"
yew = { version = "0.21",  features = ["csr"] }
yew-router = { version = "0.18" }
web-sys = { version = "0.3", features = [ "DomRect", "Element", "UrlSearchParams"] }
wasm-bindgen = { version = "0.2" }
js-sys = "0.3"
log = "0.4.6"
wasm-logger = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_plain = "1.0"
wasm-bindgen-futures = "0.4"
url = "2.1"
percent-encoding = "2.1"
gloo-timers = "0.3"
gloo-utils = "0.2"
regex = "1.7"
indexmap = { version = ">= 1.9", features = ["std"] }

proxmox-schema = "5"
proxmox-time = "2"
proxmox-uuid = "1"
proxmox-human-byte = "1.0"
proxmox-base64 = "1"
proxmox-serde = "1"

pwt = "0.7.0"
pwt-macros = "0.5"

pve-api-types = "8"
proxmox-yew-comp = "0.6.0"

proxmox-login = "1.0"
proxmox-client = { version = "1.0", features = ["perl-api-path-builder"] }

[patch.crates-io]
#proxmox-client = { path = "../proxmox/proxmox-client" }
proxmox-yew-comp = { path = "../proxmox-yew-comp" }
pwt = { path = "../proxmox-yew-widget-toolkit" }
pwt-macros = { path = "../proxmox-yew-widget-toolkit/pwt-macros" }
